added user api's, posts migration file and improved logging (#4)
